--- a/Nicoe/Nicoe.vcxproj.filters
+++ b/Nicoe/Nicoe.vcxproj.filters
@@ -28,4 +28,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="NintendontConfiguration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
