--- a/Nicoe/Nicoe.vcxproj.filters
+++ b/Nicoe/Nicoe.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="CommonConfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
