--- a/Nicoe.Tests/Nicoe.Tests.csproj
+++ b/Nicoe.Tests/Nicoe.Tests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstructorTests.cs" />
     <Compile Include="EqualityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
