Add and fix tests

--- a/Nicoe.Tests/Nicoe.Tests.fsproj
+++ b/Nicoe.Tests/Nicoe.Tests.fsproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="FlagTests.fs" />
+    <Compile Include="WrapperTests.fs" />
     <Compile Include="ConstructorTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
