--- a/Nicoe/Nicoe.vcxproj
+++ b/Nicoe/Nicoe.vcxproj
@@ -114,10 +114,12 @@
     <ClCompile Include="ByteOrderConversion.cpp" />
     <ClCompile Include="ByteOrderConversion.h" />
     <ClCompile Include="NintendontConfiguration.cpp" />
+    <ClCompile Include="StringConversion.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommonConfig.h" />
     <ClInclude Include="Enums.h" />
+    <ClInclude Include="StringConversion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
