Handle fixed-buffer strings in nincfg

--- a/Nicoe.Tests/Nicoe.Tests.fsproj
+++ b/Nicoe.Tests/Nicoe.Tests.fsproj
@@ -5,6 +5,7 @@
 
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
+    <Platforms>x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
