--- a/Nicoe.Configuration.V10/Nicoe.Configuration.V10.filters
+++ b/Nicoe.Configuration.V10/Nicoe.Configuration.V10.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="NintendontConfiguration.cpp">
+    <ClCompile Include="..\NintendontConfiguration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
